Minor text updates

--- a/templates/HFC/screen_result_email.html
+++ b/templates/HFC/screen_result_email.html
@@ -2,18 +2,23 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title></title>
-        
-    </head>
+<head>
+    <title></title>
+</head>
 
-    <body>
-            <div>
-                <p> Dear {{name}}, </p>
-                <p>Your screening result is here,</p>
-                <p>Screening Status- {{screening_status}}</p>
-            
-            </div>
-    </body>
+<body>
+    <div>
+        <p> Dear {{name}}, </p>
+        <p> Your screening result is here, </p>
+        <p> Screening Status - {{screening_status}}</p>
+        <p>
+            Please reach out to us directly incase you have any concerns or queries.
+            <br>
+            Best,
+            HFC Core Team
+        </p>
+
+    </div>
+</body>
+
 </html>
-                
