--- a/templates/HFC/terms_conditions.html
+++ b/templates/HFC/terms_conditions.html
@@ -30,87 +30,116 @@
         <div class="main">
             <section id="contents">
                 <div class="blog-single">
-                <h3>Website Terms and Conditions of Use</h3>
-                <div class="blog-single__content">
-                <h3>1. Terms</h3>
+                    <h3>Website Terms and Conditions of Use</h3>
+                    <div class="blog-single__content">
+                        <h3>1. Terms</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">By accessing this Website, accessible from
-                    www.hackforchange.co.in, you are agreeing to be bound by these Website Terms and Conditions of Use and
-                    agree that you are responsible for the agreement with any applicable local laws. If you disagree
-                    with any of these terms, you are prohibited from accessing this site. The materials contained in
-                    this Website are protected by copyright and trade mark law.</p>
-                <h3>2. Use License</h3>
+                        <p style="text-align:justify;text-justify:inter-word;">By accessing this Website, accessible
+                            from
+                            www.hackforchange.co.in, you are agreeing to be bound by these Website Terms and Conditions
+                            of Use and
+                            agree that you are responsible for the agreement with any applicable local laws. If you
+                            disagree
+                            with any of these terms, you are prohibited from accessing this site. The materials
+                            contained in
+                            this Website are protected by copyright and trade mark law.</p>
+                        <h3>2. Use License</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">Permission is granted to temporarily download one
-                    copy of the materials on Hack For Change's Website for personal, non-commercial transitory viewing
-                    only. This is the grant of a license, not a transfer of title, and under this license you may not:
-                </p>
+                        <p style="text-align:justify;text-justify:inter-word;">Permission is granted to temporarily
+                            download one
+                            copy of the materials on Hack For Change's Website for personal, non-commercial transitory
+                            viewing
+                            only. This is the grant of a license, not a transfer of title, and under this license you
+                            may not:
+                        </p>
 
-                <ul style="list-style-type:square;list-style-position: inside;color: #706e6e;">
-                    <li>modify or copy the materials;</li>
-                    <li>use the materials for any commercial purpose or for any public display;</li>
-                    <li>attempt to reverse engineer any software contained on Hack For Change's Website;</li>
-                    <li>remove any copyright or other proprietary notations from the materials; or</li>
-                    <li>transferring the materials to another person or "mirror" the materials on any other server.</li>
-                </ul><br>
+                        <ul style="list-style-type:square;list-style-position: inside;color: #706e6e;">
+                            <li>modify or copy the materials;</li>
+                            <li>use the materials for any commercial purpose or for any public display;</li>
+                            <li>attempt to reverse engineer any software contained on Hack For Change's Website;</li>
+                            <li>remove any copyright or other proprietary notations from the materials; or</li>
+                            <li>transferring the materials to another person or "mirror" the materials on any other
+                                server.</li>
+                        </ul><br>
 
-                <p style="text-align:justify;text-justify:inter-word;">This will let Hack For Change to terminate upon
-                    violations of any of these restrictions. Upon termination, your viewing right will also be
-                    terminated and you should destroy any downloaded materials in your possession whether it is printed
-                    or electronic format. These Terms of Service has been created with the help of the <a
-                        href="https://www.termsofservicegenerator.net">Terms Of Service Generator</a></p>
-                <h3>3. Disclaimer</h3>
+                        <p style="text-align:justify;text-justify:inter-word;">This will let Hack For Change to
+                            terminate upon
+                            violations of any of these restrictions. Upon termination, your viewing right will also be
+                            terminated and you should destroy any downloaded materials in your possession whether it is
+                            printed
+                            or electronic format. </p>
+                        <h3>3. Disclaimer</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">All the materials on Hack For Change’s Website
-                    are
-                    provided "as is". Hack For Change makes no warranties, may it be expressed or implied, therefore
-                    negates all other warranties. Furthermore, Hack For Change does not make any representations
-                    concerning the accuracy or reliability of the use of the materials on its Website or otherwise
-                    relating to such materials or any sites linked to this Website.</p>
-                <h3>4. Limitations</h3>
+                        <p style="text-align:justify;text-justify:inter-word;">All the materials on Hack For Change’s
+                            Website
+                            are
+                            provided "as is". Hack For Change makes no warranties, may it be expressed or implied,
+                            therefore
+                            negates all other warranties. Furthermore, Hack For Change does not make any representations
+                            concerning the accuracy or reliability of the use of the materials on its Website or
+                            otherwise
+                            relating to such materials or any sites linked to this Website.</p>
+                        <h3>4. Limitations</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">Hack For Change or its suppliers will not be hold
-                    accountable for any damages that will arise with the use or inability to use the materials on
-                    Hack For Change’s Website, even if Hack For Change or an authorize representative of this Website
-                    has
-                    been notified, orally or written, of the possibility of such damage. Some jurisdiction does not
-                    allow limitations on implied warranties or limitations of liability for incidental damages, these
-                    limitations may not apply to you.</p>
-                <h3>5. Revisions and Errata</h3>
+                        <p style="text-align:justify;text-justify:inter-word;">Hack For Change or its suppliers will not
+                            be hold
+                            accountable for any damages that will arise with the use or inability to use the materials
+                            on
+                            Hack For Change’s Website, even if Hack For Change or an authorize representative of this
+                            Website
+                            has
+                            been notified, orally or written, of the possibility of such damage. Some jurisdiction does
+                            not
+                            allow limitations on implied warranties or limitations of liability for incidental damages,
+                            these
+                            limitations may not apply to you.</p>
+                        <h3>5. Revisions and Errata</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">The materials appearing on Hack For Change’s
-                    Website may include technical, typographical, or photographic errors. Hack For Change will not
-                    promise
-                    that any of the materials in this Website are accurate, complete, or current. Hack For Change may
-                    change the materials contained on its Website at any time without notice. Hack For Change does not
-                    make any commitment to update the materials.</p>
-                <h3>6. Links</h3>
+                        <p style="text-align:justify;text-justify:inter-word;">The materials appearing on Hack For
+                            Change’s
+                            Website may include technical, typographical, or photographic errors. Hack For Change will
+                            not
+                            promise
+                            that any of the materials in this Website are accurate, complete, or current. Hack For
+                            Change may
+                            change the materials contained on its Website at any time without notice. Hack For Change
+                            does not
+                            make any commitment to update the materials.</p>
+                        <h3>6. Links</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">Hack For Change has not reviewed all of the sites
-                    linked to its Website and is not responsible for the contents of any such linked site. The presence
-                    of any link does not imply endorsement by Hack For Change of the site. The use of any linked website
-                    is at the user’s own risk.</p>
-                <h3>7. Site Terms of Use Modifications</h3>
+                        <p style="text-align:justify;text-justify:inter-word;">Hack For Change has not reviewed all of
+                            the sites
+                            linked to its Website and is not responsible for the contents of any such linked site. The
+                            presence
+                            of any link does not imply endorsement by Hack For Change of the site. The use of any linked
+                            website
+                            is at the user’s own risk.</p>
+                        <h3>7. Site Terms of Use Modifications</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">Hack For Change may revise these Terms of Use for
-                    its Website at any time without prior notice. By using this Website, you are agreeing to be bound by
-                    the current version of these Terms and Conditions of Use.</p>
-                <h3>8. Your Privacy</h3>
+                        <p style="text-align:justify;text-justify:inter-word;">Hack For Change may revise these Terms of
+                            Use for
+                            its Website at any time without prior notice. By using this Website, you are agreeing to be
+                            bound by
+                            the current version of these Terms and Conditions of Use.</p>
+                        <h3>8. Your Privacy</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">Please read our Privacy Policy.</p>
-                <h3>9. Governing Law</h3>
+                        <p style="text-align:justify;text-justify:inter-word;">Please read our Privacy Policy.</p>
+                        <h3>9. Governing Law</h3>
 
-                <p style="text-align:justify;text-justify:inter-word;">Any claim related to Hack For Change's Website
-                    shall be governed by the laws of af without regards to its conflict of law provisions.</p>
+                        <p style="text-align:justify;text-justify:inter-word;">Any claim related to Hack For Change's
+                            Website
+                            shall be governed by the laws of af without regards to its conflict of law provisions.</p>
+                    </div>
                 </div>
-            </div>
             </section>
             <aside id="sidebar">
                 <div class="sidebar__list">
                     <p>Explore problem statements across various issue areas</p>
                     <ul>
                         {% for issue_area in issue_areas %}
-                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
+                        <li><a
+                                href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a>
+                        </li>
                         {% endfor %}
                     </ul>
                 </div>
