Must have skills update

--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -32,11 +32,11 @@
                     <div class="leader-skill__left">
                         <p class="large bold">Must Have Skills</p>
                         <ul>
-                            <li>Leadership</li>
-                            <li>Leadership</li>
-                            <li>Leadership</li>
-                            <li>Leadership</li>
-                            <li>Leadership</li>
+                            <li>10+ years of industry experience</li>
+                            <li>Ability to guide and lead</li>
+                            <li>Strong systems & engineering knowledge</li>
+                            <li>Good written & verbal communication skills</li>
+                            <li>Technology agnostic approach</li>
                         </ul>
                     </div>
                     <div class="leader-skill__right">
@@ -115,13 +115,13 @@
                         <div class="form-field">
                             <label for="">Area of Expertise</label>
                         </div>
-                        
-                    </div>
-                        <div style=" position:relative;padding-top:0px;width: 400px;font-family: 'Nunito Sans';">
-                            {{form.area_of_expertise}}
-                        </div>
 
-                    
+                    </div>
+                    <div style=" position:relative;padding-top:0px;width: 400px;font-family: 'Nunito Sans';">
+                        {{form.area_of_expertise}}
+                    </div>
+
+
                     <div class="btn-outer">
                         <input class="btn btn--info btn--full" type="submit" value="Register">
                     </div>
