Screening model modifie

--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -19,14 +19,12 @@
                 <iframe name="formaReturning" style="display:none !important;" frameborder="0"></iframe>
                 <!--End mc_embed_signup-->
             </div>
-
-            </form>
         </div>
-        <div id="thankYouMessage" style="display:none;margin-left:400px;">
-            <p>Thank you for subscribing!</p>
+        <div id="thankYouMessage" style="display:none;margin-left:400px;font-size: 12px;">
+            <p>Successfully subscribed to the hackforchange newsletter.</p>
         </div>
+    
     </div>
-</div>
 </div>
 
 <div id="footer-wrap">
