--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -53,7 +53,7 @@
                     <div class="form-field">
                         <label for="">Issue Area</label>
                     </div>
-                    <div style="">
+                    <div>
                         {{form.issue_area}}
                     </div>
                     <div class="btn-outer">
