--- a/templates/HFC/thanks.html
+++ b/templates/HFC/thanks.html
@@ -18,8 +18,8 @@
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
             <div class="thanku-heading">
-               <h2>{{text}}<br>
-                We will get back to you shortly!!!</h2>
+               <h3>{{text}}
+                We will get back to you shortly!!!</h3>
                <a class="btn btn--info" href="{% url 'home' %}">Go Home</a> 
            </div>
         </div>
