Mentor form updated

--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -18,11 +18,12 @@
 
                 <iframe name="formaReturning" style="display:none !important;" frameborder="0"></iframe>
                 <!--End mc_embed_signup-->
+                
+                    <p id="thankYouMessage" style="display:none;font-size: 8px;">Successfully subscribed to the hackforchange newsletter.</p>
+                
             </div>
         </div>
-        <div id="thankYouMessage" style="display:none;margin-left:400px;font-size: 12px;">
-            <p>Successfully subscribed to the hackforchange newsletter.</p>
-        </div>
+        
     
     </div>
 </div>
