--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -33,7 +33,7 @@
                 <article class="post-blog">
                     <h4>{{projects_list.name}}</h4>
                     <p>{{projects_list.project_desc}}</p>
-                    <a class="btn btn--border" href="#">Learn More</a>
+                    <a class="btn btn--border" href={{projects_list.website_link}} target="_blank">Learn More</a>
                 </article>
                 {% endfor %}
             </section>
@@ -51,7 +51,7 @@
                 <div class="newsletter">
                     <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
                     <form
-                        action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04"
+                        action="https://hackforchange.us7.list-manage.com/subscribe/post?u=d108098b91660a39ebfc4dd46&amp;id=878602ff9c"
                         method="post" target="_blank" id="mc-embedded-subscribe-form" class="newsletter__form"
                         novalidate>
                         <p class="large bold">Get Latest Updates!</p>
@@ -59,12 +59,12 @@
                         <input class="btn btn--info" type="submit" value="Subscribe">
                         <div id="mce-responses" class="clear">
                             <div class="response" id="mce-error-response" style="display:none"></div>
-                            <div class="response" id="mce-success-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none;font-size: 8px;"></div>
                         </div>
                 </div>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                        name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+                        name="b_d108098b91660a39ebfc4dd46_878602ff9c" tabindex="-1" value=""></div>
         </div>
         </form>
     </div>
