Minor content updates

--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="about-team__info">
                                 <h4>Shabana Syed <span>Visual Design</span></h4>
-                                <p>Leads the design effor for hack for change and all its outreach channels</p>
+                                <p>Leads the design effort for hack for change and all its outreach channels</p>
                             </div>
                         </div>
                     </div>
