--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -25,7 +25,7 @@
 <div id="main-wrap" class="main-wrap--pdb">
     <div class="content-width">
         <ul class="tab-sec">
-            <li class="active" ><a href="#hfcCentres"><img width="27" src="{% static 'images/hfc-icon1.svg' %}"
+            <li class="active"><a href="#hfcCentres"><img width="27" src="{% static 'images/hfc-icon1.svg' %}"
                         alt="ICON"><img width="27" src="{% static 'images/hfc-icon1-alt.svg' %}" alt="ICON"><span>HFC
                         Centres</span></a>
             </li>
@@ -37,7 +37,7 @@
             </li>
         </ul>
         <div class="hfc-outer">
-            <section class="active"  id="hfcCentres">
+            <section class="active" id="hfcCentres">
                 <div class="main main--community">
                     {% for center in hfc_centers %}
                     <div class="main__community-outer">
@@ -76,7 +76,7 @@
                     {% endfor %}
                 </div>
             </section>
-            <section  id="hfcLeaderboard">
+            <section id="hfcLeaderboard">
                 <div class="unborder-table__outer">
                     <table class="unborder-table">
                         <thead>
@@ -95,7 +95,8 @@
                                         <div class="table-info" style="padding-left: 20px;">
                                             <p class="large"><span id="firstName">{{key}}</p></span>
                                             <div class="comment-count"><img width="16"
-                                                    src="{% static 'images/badge-icon.svg' %}" alt="Icon">No. of Commits : {{value}}
+                                                    src="{% static 'images/badge-icon.svg' %}" alt="Icon">No. of Commits
+                                                : {{value}}
                                             </div>
                                         </div>
                                     </div>
@@ -119,9 +120,9 @@
                             srcset="images/undraw_proud_coder_7ain@2x.png 2x, images/undraw_proud_coder_7ain@3x.png 3x"
                             alt="Pic"></div>
                     <div class="hfc-card__info">
-                        <h3>Want to set up HFC Centre in your college?</h3>
-                        <p class="small">Lorem ipsum dolor sit amet, affert qualisque efficiendvim at, per cuagam
-                            eruditi. Ius an duis</p>
+                        <h3>Want to set up a HFC Centre in your college?</h3>
+                        <p class="small">Reach out to us directly to open a new HFC
+                            Centre at your own college premises.</p>
                         <a href="{% url 'contact' %}" class="btn btn--info">Contact Us</a>
                     </div>
                 </div>
