More content fixes

--- a/templates/HFC/privacy_policy.html
+++ b/templates/HFC/privacy_policy.html
@@ -116,7 +116,7 @@
                             data is
                             transmitted by the respective Internet browser and stored in protocol files, the so-called
                             server
-                            log files. The datasets stored here may contain such data as date and time of access, name
+                            log files. The datasets stored here may contain such data as date and time of access, name,
                             website,
                             IP address, referrer URL (original URL from which you arrived at the website), the amount of
                             data
@@ -128,7 +128,7 @@
                             anyone under the age of 15. If you notice we collect and process personal data
                             of anyone
                             under this age, please contact us. We encourage parents and legal guardians to monitor their
-                            children’s Internet usage and to help enforce this Policy by instructing their children
+                            children’s internet usage and to help enforce this Policy by instructing their children
                             never to
                             provide personal information through the websites or Services.</p>
 
